# veil-phantom

./: .gitignore  LICENSE  README.md  RESEARCH_PAPER.md  pyproject.toml
benchmarks/: agent_utility.py  benchmark_results.json  run_benchmarks.py
benchmarks/results/: showcase_benchmark.json  showcase_final.json  showcase_run1.json  showcase_run2.json
benchmarks/verticals/: communications.py  financial.py  healthcare.py  hr.py  legal.py  multi_step.py  sales.py  support.py
examples/: agentic_test.py  basic.py
examples/support-agent-demo/: .gitignore  README.md  app.py  requirements.txt
paper/: generate_paper.py
src/veil_phantom/: __init__.py  client.py  config.py  middleware.py  result.py  session.py  types.py
src/veil_phantom/engine/: __init__.py  contextual.py  data.py  nlp.py  patterns.py  pipeline.py  verbal.py
src/veil_phantom/integrations/: langchain.py  openai.py
src/veil_phantom/shade/: __init__.py  downloader.py  provider.py
tests/: test_engine.py
