[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veil-phantom"
version = "1.0.0"
description = "Privacy-preserving PII redaction for AI pipelines. Real data never leaves your machine."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Veil Privacy", email = "hello@helloveil.com" },
]
keywords = ["pii", "privacy", "redaction", "llm", "ai", "ner", "phantom", "gdpr", "popia"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "onnxruntime>=1.17.0",
    "tokenizers>=0.15.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
gpu = ["onnxruntime-gpu>=1.17.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0"]

[project.urls]
Homepage = "https://helloveil.com"
Documentation = "https://github.com/helloveil/veil-phantom#readme"
Repository = "https://github.com/helloveil/veil-phantom"

[tool.hatch.build.targets.wheel]
packages = ["src/veil_phantom"]
